--- a/src/app/components/gameBoard/gameBoard.scss
+++ b/src/app/components/gameBoard/gameBoard.scss
@@ -53,6 +53,11 @@
         justify-content: center;
         height: 50%;
         width: 50%;
+
+        .dead-occupant {
+          color: gray;
+          opacity: .5;
+        }
       }
     }
   }
