--- a/src/app/components/mainMenu/mainMenu.html
+++ b/src/app/components/mainMenu/mainMenu.html
@@ -23,7 +23,7 @@
         <button class="btn btn-primary btn-lg btn-block" ng-click="mainMenu.goTo('prefight', 'story')">Continue Story</button>
 
         <button class="btn btn-primary btn-lg btn-block" ng-click="mainMenu.goTo('help')">Help</button>
-        <button class="btn btn-primary btn-lg btn-block" ng-click="maineMenu.goTo('achievements')" disabled>Achievements</button>
+        <button class="btn btn-primary btn-lg btn-block" ng-click="mainMenu.goTo('achievements')">Achievements</button>
       </div>
     </div>
   </div>
