--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -35,7 +35,7 @@ $nav-tabs-active-link-hover-border-color:   $ozPrimary !important;
 body {
   height: auto;
   min-height: 500px;
-  min-width: 1000px;
+  // min-width: 1000px;
 }
 
 .full-width {
