--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -12,4 +12,4 @@
 <store ng-if="main.stateChangeService.playerState === 'store'"></store>
 
 <help-screen ng-if="main.stateChangeService.playerState === 'help'"></help-screen>
-
+<achievements-menu ng-if="main.stateChangeService.playerState === 'achievements'"></achievements-menu>
