--- a/src/app/components/achievements/achievementsMenu.html
+++ b/src/app/components/achievements/achievementsMenu.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<h1 class="text-center">Achievements</h1>
 
-</body>
-</html>
+<span counter value="vm.counterValue" from="0" to="vm.percentageComplete" duration="2000" effect="'easeOutCubic'"></span>
+<p class="text-center">Percent Complete: {{ vm.counterValue | number : 0}}%</p>
+
+<div class="text-block">
+    <div ng-repeat="achievement in vm.achievements"
+         class="achievement-block"
+         ng-class="::{'locked-achievement' : !achievement.unlocked}">
+        <span class="achievement-title">{{ achievement.displayName}}</span>
+        <p ng-if="::!achievement.unlocked">{{ achievement.lockedDescription }}</p>
+        <p ng-if="::achievement.unlocked">{{ achievement.unlockedDescription }}</p>
+        <span class="achievement-unlock-date" ng-if="::achievement.unlocked">Unlocked On: {{ achievement.unlockedDate }}</span>
+    </div>
+</div>
+
+<div class="text-center">
+    <button class="btn btn-primary"
+            ng-click="vm.goBack()">Back</button>
+</div>
