--- a/src/app/components/startScreen/startScreen.html
+++ b/src/app/components/startScreen/startScreen.html
@@ -1,15 +1,18 @@
 <div class="text-center vertical-center">
-  <div>
-    <h1>The Outer Zone</h1>
+    <div>
+        <h1>The Outer Zone</h1>
 
-    <div class="btn-group-vertical">
-      <button class="btn btn-primary"
-              ng-click="startScreen.newGame()">New Game</button>
-      <button class="btn btn-primary disabled">New Game+</button>
-      <button class="btn btn-primary"
-              ng-class="{'disabled' : !startScreen.saveGameRetrieved}"
-              ng-click="startScreen.loadGame()">Continue</button>
-      <!--<button class="btn btn-primary">Options</button>-->
+        <div class="btn-group-vertical">
+            <button class="btn btn-primary"
+                    ng-click="startScreen.newGame()">New Game
+            </button>
+            <button class="btn btn-primary disabled">New Game+</button>
+            <button class="btn btn-primary"
+                    ng-class="{'disabled' : !startScreen.saveGameRetrieved}"
+                    ng-click="startScreen.loadGame()">Continue
+            </button>
+        </div>
     </div>
-  </div>
+
+
 </div>
