--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -13,3 +13,4 @@
 
 <help-screen ng-if="main.stateChangeService.playerState === 'help'"></help-screen>
 <achievements-menu ng-if="main.stateChangeService.playerState === 'achievements'"></achievements-menu>
+<statistics-display ng-if="main.stateChangeService.playerState === 'stats'"></statistics-display>
